--- a/style.css
+++ b/style.css
@@ -438,8 +438,12 @@ progress::-moz-progress-bar {
     height: 60px;
     width: 60px;
     background-color: #D76052;
-    -webkit-box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.2);
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2);
+    /* -webkit-box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.2);
+    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2); */
+
+    backdrop-filter: blur( 4px );
+    -webkit-backdrop-filter: blur( 4px );
+    border-radius: 10px;
 }
 
 @media screen and (max-width: 1025px) {
